# devastator

./: CMakeLists.txt  README.md  package.xml
devastator_control/: CMakeLists.txt  package.xml
devastator_description/: CMakeLists.txt  package.xml
devastator_description/include/sensor_subscriber/: CMakeLists.txt  Displaying the Data.txt  Documentation.txt  package.xml
devastator_description/include/sensor_subscriber/scripts/: sensor_subscriber.py  sensor_subscriber_v2.py  sub_pub.py  sub_pub_v2.py
devastator_description/launch/: devastator_full_rviz.launch  devastator_laser_rviz.launch  devastator_rviz_gmapping.launch
devastator_description/meshes/base/: base_collision.stl  camera_pan.dae  collision_base.dae
devastator_description/meshes/sensors/: camera.dae  digital_ir.dae  ir_sensor.dae  ultrasonic.dae
devastator_description/meshes/wheels/: belt.dae  belt2.dae  wheel_basic.dae  wheel_basic_collision.stl  wheel_track_collision.stl
devastator_description/models/: model.sdf
devastator_description/rviz/: mapping.rviz  robot_test.rviz
devastator_description/urdf/: devastator_full.gazebo.xacro  devastator_full.urdf.xacro  devastator_laser.gazebo.xacro  devastator_laser.urdf.xacro  macros.xacro  mybot.xacro  range.urdf.xacro
devastator_gazebo/: CMakeLists.txt  package.xml
devastator_gazebo/launch/: devastator_asti.launch  devastator_boxworld.launch  devastator_empty_world.launch  devastator_full_playground.launch  devastator_playground.launch  devastator_world.launch
devastator_gazebo/worlds/: asti_secondfloor.world  devastator_box.world  empty.world  simple_house.world  simple_house_box.world
devastator_navigation/: CMakeLists.txt  package.xml
devastator_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params_devastator.yaml
devastator_navigation/launch/: amcl_demo.launch  devastator_exploration.launch  devastator_exploration_demo.launch  devastator_joy_teleop.launch  devastator_move_base.launch  devastator_navigation.launch  gmapping_demo.launch
devastator_navigation/rviz/: devastator_navigation.rviz
devastator_slam/: CMakeLists.txt  package.xml
devastator_slam/launch/: devastator_gmapping2.launch  devastator_slam3.launch
devastator_slam/rviz/: devastator_gmapping.rviz
