<?xml version="1.0"?>
<package format="2">
  <name>devastator</name>
  <version>0.0.0</version>
  <description>The devastator package</description>
  <maintainer email="joshua.javier.alpha@gmail.com">Joshua Javier</maintainer>

  <license>TBA</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    
  </export>
</package>
