<?xml version="1.0"?>
<package format="2">
  <name>devastator_gazebo</name>
  <version>0.0.0</version>
  <description>The devastator_gazebo package</description>

  <maintainer email="blackviper@todo.todo">blackviper</maintainer>
  <description>
    Gazebo simulation package for the TurtleBot3
  </description>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
  </export>
</package>